src/objects/Astrum_Event__c.object
<CustomObject>
    <description>Custom calendar for Field Sales and Surveyors. Tracks the life cycle of an event and synchronizes with the standard SalesForce calendar.</description>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <description>A copy of the Start Date/Time field</description>
        <formula>Start_Date_Time__c</formula>
        <inlineHelpText>A copy of the Start Date/Time field</inlineHelpText>
        <label>Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Canceled_by_Customer_Date__c</fullName>
        <label>Canceled by Customer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Astrum Events</relationshipLabel>
        <relationshipName>Astrum_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_No_Show_Date__c</fullName>
        <label>Customer No-Show Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Start_Date_Time_Text__c</fullName>
        <description>Date/Time set to the time zone of the customer&apos;s address</description>
        <label>Customer Start Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Stop_Date_Time_Text__c</fullName>
        <description>Date/Time set to the time zone of the customer&apos;s address</description>
        <label>Customer Stop Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D2D_Survey_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D2D Survey Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualified_Approved_Date__c</fullName>
        <label>Disqualified Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disqualified_Rejected_Date__c</fullName>
        <label>Disqualified Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DurationInMinutes__c</fullName>
        <formula>(Stop_Date_Time__c - Start_Date_Time__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Automatically_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Automatically Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_ID_Backup__c</fullName>
        <description>This field was needed for Rescheduled events. We are clearing out the unique external ID field Event_Backup__c on the old rescheduled record so that we can clone and create the new scheduled record. This should help show the original link, without uniqueness restriction.</description>
        <label>Event ID Backup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SF ID for the standard calendar event.  This is set to unique to prevent data linking issues.</description>
        <externalId>true</externalId>
        <label>Event ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Manually_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Manually Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_Been_Missed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ever Been Missed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAllDayEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Day_Limit_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Day Limit Reached ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Week_Limit_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Week Limit Reached ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Astrum Events</relationshipLabel>
        <relationshipName>Astrum_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked_Event__c</fullName>
        <formula>if(Event_ID__c != null
   ,HYPERLINK(
      LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;  Event_ID__c
      ,if(isblank(Event_Name__c),&apos;no name&apos;, Event_Name__c)
   )
   , &apos;&apos;
)
&amp;
if(Event_ID__c = null &amp;&amp; Event_ID_Backup__c != null
   ,HYPERLINK(
      LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;  Event_ID_Backup__c 
      ,if(isblank(Event_Name__c),&apos;Updated Scheduled Event&apos;, Event_Name__c)
   )
   , &apos;&apos;
)</formula>
        <label>Linked Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missed_Date__c</fullName>
        <label>Missed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes pertinent to the schedule or surveyor (e.g. shading issues, roofs to survey/avoid, mean dogs, scheduling constraints, etc.)</description>
        <inlineHelpText>Notes pertinent to the schedule or surveyor (e.g. shading issues, roofs to survey/avoid, mean dogs, scheduling constraints, etc.)</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Astrum Events</relationshipLabel>
        <relationshipName>Astrum_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Address_1__c</fullName>
        <formula>Opportunity__r.Property__r.Name</formula>
        <label>Property Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_2__c</fullName>
        <formula>Opportunity__r.Property__r.Property_Address_2__c</formula>
        <label>Property Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Opportunity__r.Property__r.Property_City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <formula>text(Opportunity__r.Property__r.Property_County__c)</formula>
        <label>Property County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <formula>Opportunity__r.Property__c</formula>
        <label>Property ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>text(Opportunity__r.Property__r.Property_State__c)</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <description>This is referenced in the Astrum Event Trigger for use in synchronizing with the standard event.</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>This is referenced in the Astrum Event Trigger for use in synchronizing with the standard event.  Formula used because you can&apos;t reference this easily through trigger list.</description>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rescheduled_Date__c</fullName>
        <label>Rescheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site_Survey_Type__c</fullName>
        <label>Site Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>Site Survey Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Survey Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement + Draw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Only (long)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Measure (short)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing only (long)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pictometry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redraw (short)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDateTimeCopy__c</fullName>
        <label>StartDateTimeCopy</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Week_Day__c</fullName>
        <formula>CASE( MOD(  DATEVALUE(Start_Date_Time__c)  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <label>Start Date Week Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Schedule Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified-Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer No-Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Date_Time__c</fullName>
        <label>Stop Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Start_Date__c</fullName>
        <formula>DATEVALUE( Start_Date_Time__c ) - MOD(DATEVALUE( Start_Date_Time__c )- DATE(1900, 1, 7), 7) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <label>Astrum Event</label>
    <listViews>
        <fullName>All_w_Details</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Subject__c</columns>
        <columns>Site_Survey_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Week_Start_Date__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>Stop_Date_Time__c</columns>
        <columns>Rescheduled_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All w/Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Event-{00000}</displayFormat>
        <label>Astrum Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Astrum Events</pluralLabel>
    <recordTypes>
        <fullName>Availability_Block</fullName>
        <active>true</active>
        <description>A block of time where the rep/surveyor is available/unavailable for scheduling.</description>
        <label>Availability Block</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Visit_Onsite</fullName>
        <active>true</active>
        <description>Sales Visit Onsite - in person</description>
        <label>Sales Visit Onsite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Visit_Remote</fullName>
        <active>true</active>
        <description>Sales Visit Remote - via a sales phone call</description>
        <label>Sales Visit Remote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Survey_Onsite</fullName>
        <active>true</active>
        <description>Site Survey Onsite</description>
        <label>Site Survey Onsite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Survey_Remote</fullName>
        <active>true</active>
        <description>Site Survey Remote using Aerial Photos</description>
        <label>Site Survey Remote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard Calendar Event</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>